--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@
     scale: 1.1;
 }
 
+.navbar {
+  width: 100%;
+  background-color: white;
+}
+
 .respo1 {
   display: flex;
   object-fit: cover;
@@ -18,14 +23,13 @@
   transition: all 1s ease-in-out;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   overflow: hidden;
-  margin: 10px;
+  /* margin: 10px; */
   border-radius: 20px;
 }
 
 .respo > img {
   width: 100%;
   height: 100%;
-  padding: 20px;
 }
 
 .respo1 > img {
@@ -49,6 +53,7 @@ h4 {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 10px 0px;
 }
 
 .col-flex {
@@ -109,4 +114,37 @@ button:hover {
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+}
+
+.footer {
+  display: flex;
+  background-color: #ffa500;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  color: white;
+}
+
+footer {
+  background-color: #ffa500;
+  color: white;
+  display: flex;
+}
+
+.link {
+  padding: 3px 10px;
+}
+
+.link > a{
+  text-decoration: none;
+  color: white;
+}
+
+.frame {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
